--- a/sign-up.html
+++ b/sign-up.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <link rel="stylesheet" href="sign-up.css">
     <title>Sign Up</title>
-    <div id="header">
-        <h2>Sign Up<h2>
-    </div>
+    <body>
+ 
+        
+        <div class="header">
+            <h1>Sign Up<h1>
+        </div>
 
-    <div id="sign-up">
-        <form action="log-in.html">
-            <label for="username">Username</label><br>
-            <input type="text" id="username" name="Username"><br><br>
-            <label for="email">E-mail</label><br>
-            <input type="text" id="email" name="E-Mail"><br><br>
-            <input type="submit" value="Submit">
-        </form>
-    </div>
-</body>
+        <div class="sign-up">
+            <form action="log-in.html">
+                <label for="username">Username</label><br>
+                <input type="text" id="username" name="Username"><br><br>
+                <label for="email">E-mail</label><br>
+                <input type="text" id="email" name="E-Mail"><br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+    </body>
 </html>
