--- a/sign-up.html
+++ b/sign-up.html
@@ -13,8 +13,8 @@
             <form action="log-in.html">
                 <label for="username">Username</label><br>
                 <input type="text" id="username" name="Username"><br><br>
-                <label for="email">E-mail</label><br>
-                <input type="text" id="email" name="E-Mail"><br><br>
+                <label for="password">password</label><br>
+                <input type="text" id="password" name="Password"><br><br>
                 <input type="submit" value="Submit">
             </form>
         </div>
