--- a/sign-up.html
+++ b/sign-up.html
@@ -9,7 +9,7 @@
     </head>
 
     <title>Sign Up</title>
-    
+
     <body>
  
         
@@ -21,7 +21,7 @@
             <form action="log-in.html">
                 <label for="username">Username</label><br>
                 <input type="text" id="username" name="Username"><br><br>
-                <label for="password">password</label><br>
+                <label for="password">Password</label><br>
                 <input type="text" id="password" name="Password"><br><br>
                 <input type="submit" value="Submit">
             </form>
