--- a/budget.html
+++ b/budget.html
@@ -2,6 +2,7 @@
 <head>
     <title>Budget</title>
     <link rel="stylesheet" href="budget.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <h1>Budget App</h1>
@@ -11,9 +12,9 @@
             <div id="input-budget">
                 <p>Please Enter Your Budget</p>
                 <input id="budgetUi" class="user-input">
-                <button id="btn-budget-calculate">Calculate</button>
+                <button id="btn-budget-calculate" onclick="budgetUpdate()">Calculate</button>
             </div>
-            
+
             <div id="input-expense" class="flex-col">
                 <div id="input-expense-name">
                     <p>Please Enter Your Expense</p>
@@ -23,41 +24,45 @@
                     <p>Please Enter Expense Amount</p>
                     <input id="expenseAmountUi" class="user-input">
                 </div>
-                <button>Add Expense</button>
+                <button id="btnAddExpense" onclick="expenseAdd()">Add Expense</button>
             </div>
         </section>
 
         <section id="info-display" class="flex-col">
             <div id="showcases" class="flex-row">
                 <div id="budget-showcase" class="showcase-box">
-                    <h2>Budget</h2>
-                    <ion-icon name="cash-outline"></ion-icon>
-                    <p>$0</p>
+                    <div><h2>BUDGET</h2></div>
+                    <div class="icon"><ion-icon name="cash-outline"></ion-icon></div>
+                    <p style="color: green;" id="budgetJS">$0</p>
                 </div>
 
-                <div id="expense-showcase">
-                    <h2>Expenses</h2>
-                    <ion-icon name="card-outline"></ion-icon>
-                    <p>$0</p>
+                <div id="expense-showcase" class="showcase-box">
+                    <h2>EXPENSES</h2>
+                    <div class="icon"><ion-icon name="card-outline"></ion-icon></div>
+                    <p style="color: red;"  id="expenseJS">$0</p>
                 </div>
 
-                <div id="balance-showcase">
-                    <h2>Balance</h2>
-                    <ion-icon name="logo-usd"></ion-icon>
-                    <p>$0</p>
+                <div id="balance-showcase" class="showcase-box">
+                    <h2>BALANCE</h2>
+                    <div class="icon"><ion-icon name="logo-usd"></ion-icon></div>
+                    <p id="balanceJS">$0</p>
                 </div>
             </div>
 
             <div id="expense-list">
-                <div>
-                    <p>Expense Name</p>
-                    <p>Expense Amount</p>
+                <div class="expenseItem">
+                    <div id="expenseNames" class="fuckingkillme">
+                        <p>Expense Name</p>
+                    </div>
+                    <div id="expenseValues" class="fuckingkillme">
+                        <p>Expense Amount</p>
+                    </div>
                 </div>
             </div>
         </section>
     </div>
 
+    <script src="budget.js"></script>
     <!-- Ion-icon scripts -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</body>
